# setup-badge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/config/: hadolint-cfg.yaml  yamllint-cfg.yaml
.github/workflows/: cd-production.yaml  cd-staging.yaml  cron-tasks.yaml  reusable-build-test.yaml  reusable-codeql.yaml  reusable-dependency-review.yaml  reusable-pre-commit.yaml
badges/: README.md  coverage.json  language.json  license.json
src/setup_badge/: run.py
tests/: conftest.py  test_run.py
